Created mixins for button class

--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,1 +1,8 @@
-// Mixins Here
+.btn(@col, @bg-color) {
+  color: @col;
+  background-color: @bg-color;
+  padding: 0.5em 1.5em;
+  font-size: 14px;
+  align-self: start;
+  text-decoration: none;
+}
