--- a/less/mixins.less
+++ b/less/mixins.less
@@ -6,3 +6,11 @@
   align-self: start;
   text-decoration: none;
 }
+
+.flex(@justify, @align, @direction, @wrap) {
+  display: flex;
+  justify-content: @justify;
+  align-items: @align;
+  flex-direction: @direction;
+  flex-wrap: @wrap;
+}
