--- a/less/navigation.less
+++ b/less/navigation.less
@@ -13,6 +13,10 @@ nav {
       color: @nav-font;
       font-size: 16px;
       margin-right: 3em;
+
+      @media @phone {
+        margin-right: 1.5em;
+      }
     }
   }
 }
