--- a/css/index.css
+++ b/css/index.css
@@ -185,6 +185,11 @@ nav .nav-items a.nav-item {
   font-size: 16px;
   margin-right: 3em;
 }
+@media (max-width: 500px) {
+  nav .nav-items a.nav-item {
+    margin-right: 1.5em;
+  }
+}
 footer {
   color: #22283B;
   background: #f4f4f4;
@@ -230,12 +235,32 @@ footer {
 }
 .home .walk .walk-text {
   width: 50%;
+  display: flex;
+  flex-direction: column;
 }
 .home .walk .walk-text h3 {
   margin-bottom: 10px;
 }
 .home .walk .walk-text p {
   margin-bottom: 26px;
+}
+.home .walk .walk-text .btn {
+  color: #f6f6f6;
+  background-color: #22283a;
+  padding: 0.5em 1.5em;
+  font-size: 14px;
+  align-self: start;
+  text-decoration: none;
+  border-radius: 3px;
+}
+@media (max-width: 500px) {
+  .home .walk .walk-text .btn {
+    align-self: unset;
+  }
+}
+.home .walk .walk-text .btn:hover {
+  color: #22283a;
+  background-color: #f6f6f6;
 }
 .home .walk .walk-img {
   width: 46%;
