--- a/css/index.css
+++ b/css/index.css
@@ -203,6 +203,9 @@ footer {
 .home .intro h2 {
   padding: 15px;
 }
+.home .intro img {
+  width: 100%;
+}
 .home .intro p {
   padding: 0 15px;
 }
@@ -216,6 +219,17 @@ footer {
   margin: 20px 2.5%;
   border-radius: 20px;
   height: 100%;
+}
+@media (max-width: 500px) {
+  .home .space-images img {
+    display: none;
+  }
+  .home .space-images img:nth-last-child(1) {
+    display: block;
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+  }
 }
 .home .visit-planets {
   padding: 15px;
@@ -233,10 +247,22 @@ footer {
   display: flex;
   justify-content: center;
 }
+@media (max-width: 500px) {
+  .home .walk {
+    margin-top: 30px;
+    flex-direction: column-reverse;
+    padding: 2rem;
+  }
+}
 .home .walk .walk-text {
   width: 50%;
   display: flex;
   flex-direction: column;
+}
+@media (max-width: 500px) {
+  .home .walk .walk-text {
+    width: unset;
+  }
 }
 .home .walk .walk-text h3 {
   margin-bottom: 10px;
@@ -256,6 +282,7 @@ footer {
 @media (max-width: 500px) {
   .home .walk .walk-text .btn {
     align-self: unset;
+    text-align: center;
   }
 }
 .home .walk .walk-text .btn:hover {
@@ -266,8 +293,20 @@ footer {
   width: 46%;
   margin-left: 4%;
 }
+@media (max-width: 500px) {
+  .home .walk .walk-img {
+    width: unset;
+    margin-bottom: 26px;
+  }
+}
 .home .walk .walk-img img {
   width: 100%;
   height: auto;
   border-radius: 10px;
+}
+@media (max-width: 500px) {
+  .home .walk .walk-img img {
+    height: 200px;
+    object-fit: cover;
+  }
 }
