--- a/less/home-page.less
+++ b/less/home-page.less
@@ -5,6 +5,9 @@
     h2 {
       padding: 15px;
     }
+    img {
+      width: 100%;
+    }
 
     p {
       padding: 0 15px;
@@ -21,6 +24,15 @@
       margin: 20px 2.5%;
       border-radius: 20px;
       height: 100%;
+      @media @phone {
+        display: none;
+        &:nth-last-child(1) {
+          display: block;
+          width: 100%;
+          height: 200px;
+          object-fit: cover;
+        }
+      }
     }
   }
 
@@ -43,10 +55,20 @@
     display: flex;
     justify-content: center;
 
+    @media @phone {
+      margin-top: 30px;
+      flex-direction: column-reverse;
+      padding: 2rem;
+    }
+
     .walk-text {
       width: 50%;
       display: flex;
       flex-direction: column;
+
+      @media @phone {
+        width: unset;
+      }
 
       h3 {
         margin-bottom: 10px;
@@ -64,11 +86,19 @@
     .walk-img {
       width: 46%;
       margin-left: 4%;
+      @media @phone {
+        width: unset;
+        margin-bottom: 26px;
+      }
 
       img {
         width: 100%;
         height: auto;
         border-radius: 10px;
+        @media @phone {
+          height: 200px;
+          object-fit: cover;
+        }
       }
     }
   }
